--- a/weewx/index.html
+++ b/weewx/index.html
@@ -25,7 +25,7 @@
       <div id="masthead">
         <h1>West Central Stafford County - Hartwood, VA</h1>
         <h2>Current Weather Conditions</h2>
-          <h2>09/12/2018 04:20:00 PM</h2>
+          <h2>09/13/2018 04:05:00 PM</h2>
       </div>
 
       <div id="stats_group">
@@ -39,35 +39,35 @@
             <tbody>
               <tr>
                 <td class="stats_label">Outside Temperature</td>
-                <td class="stats_data">81.3&#176;F</td>
+                <td class="stats_data">82.9&#176;F</td>
               </tr>
               <tr>
                 <td class="stats_label">Wind Chill</td>
-                <td class="stats_data">81.3&#176;F</td>
+                <td class="stats_data">82.9&#176;F</td>
               </tr>
               <tr>
                 <td class="stats_label">Heat Index</td>
-                <td class="stats_data">87.6&#176;F</td>
+                <td class="stats_data">90.5&#176;F</td>
               </tr>
               <tr>
                 <td class="stats_label">Dewpoint</td>
-                <td class="stats_data">75.4&#176;F</td>
+                <td class="stats_data">75.5&#176;F</td>
               </tr>
               <tr>
                 <td class="stats_label">Humidity</td>
-                <td class="stats_data">82%</td>
+                <td class="stats_data">79%</td>
               </tr>
               <tr>
                 <td class="stats_label">Barometer</td>
-                <td class="stats_data">30.208 inHg</td>
+                <td class="stats_data">30.187 inHg</td>
               </tr>
               <tr>
                 <td class="stats_label">Barometer Trend (3 hours)</td>
-                <td class="stats_data">-0.047 inHg</td>
+                <td class="stats_data">-0.038 inHg</td>
               </tr>
               <tr>
                 <td class="stats_label">Wind</td>
-                <td class="stats_data">1 mph from 340&#176; (NNW)</td>
+                <td class="stats_data">1 mph from 39&#176; (NE)</td>
               </tr>
               <tr>
                 <td class="stats_label">Rain Rate</td>
@@ -75,11 +75,11 @@
               </tr>
               <tr>
                 <td class="stats_label">Inside Temperature</td>
-                <td class="stats_data">79.8&#176;F</td>
+                <td class="stats_data">83.7&#176;F</td>
               </tr>
               <tr>
                 <td class="stats_label">UV</td>
-                <td class="stats_data">2.2</td>
+                <td class="stats_data">5.0</td>
               </tr>
               <tr>
                 <td class="stats_label">ET</td>
@@ -87,7 +87,7 @@
               </tr>
               <tr>
                 <td class="stats_label">Solar Radiation</td>
-                <td class="stats_data">259 W/m&#178;</td>
+                <td class="stats_data">554 W/m&#178;</td>
               </tr>
             </tbody>
           </table>
@@ -107,8 +107,8 @@
                   Low Temperature
                 </td>
                 <td class="stats_data">
-                  81.7&#176;F at 03:42:14 PM<br/>
-                  67.3&#176;F at 04:33:14 AM
+                  82.9&#176;F at 04:00:18 PM<br/>
+                  70.5&#176;F at 04:12:15 AM
                 </td>
               </tr>
               <tr>
@@ -117,8 +117,8 @@
                   Low Wind Chill
                 </td>
                 <td class="stats_data">
-                  89.0&#176;F at 03:43:15 PM<br/>
-                  67.3&#176;F at 04:33:14 AM
+                  91.7&#176;F at 04:01:15 PM<br/>
+                  70.5&#176;F at 04:12:15 AM
                 </td>
               </tr>
               <tr>
@@ -127,8 +127,8 @@
                   Low Humidity
                 </td>
                 <td class="stats_data">
-                  99% at 03:46:14 AM<br/>
-                  81% at 03:47:15 PM
+                  99% at 12:00:14 AM<br/>
+                  77% at 04:02:15 PM
                 </td>
               </tr>
               <tr>
@@ -137,8 +137,8 @@
                   Low Dewpoint
                 </td>
                 <td class="stats_data">
-                  76.5&#176;F at 03:44:14 PM<br/>
-                  66.9&#176;F at 01:29:14 AM
+                  76.9&#176;F at 02:11:15 PM<br/>
+                  70.2&#176;F at 04:12:15 AM
                 </td>
               </tr>
               <tr>
@@ -147,24 +147,24 @@
                   Low Barometer
                 </td>
                 <td class="stats_data">
-                  30.279 inHg at 11:28:14 AM<br/>
-                  30.192 inHg at 12:01:14 AM
+                  30.259 inHg at 09:52:15 AM<br/>
+                  30.181 inHg at 04:02:15 PM
                 </td>
               </tr>
               <tr>
                 <td class="stats_label">Today's Rain</td>
-                <td class="stats_data">0.00 in</td>
+                <td class="stats_data">0.01 in</td>
               </tr>
               <tr>
                 <td class="stats_label">High Rain Rate</td>
-                <td class="stats_data">0.00 in/hr at 12:00:14 AM</td>
+                <td class="stats_data">0.04 in/hr at 10:21:15 AM</td>
               </tr>
               <tr>
                 <td class="stats_label">
                   High Wind
                 </td>
                 <td class="stats_data">
-                  3 mph from 162&#176; at 02:49:14 PM
+                  8 mph from 148&#176; at 03:39:15 PM
                 </td>
               </tr>
               <tr>
@@ -180,7 +180,7 @@
                   RMS Wind
                 </td>
                 <td class="stats_data">
-                  0 mph
+                  1 mph
                 </td>
               </tr>
 
@@ -190,8 +190,8 @@
                   Vector Average Direction
                 </td>
                 <td class="stats_data">
-                  0 mph<br/>
-                  144&#176;
+                  1 mph<br/>
+                  109&#176;
                 </td>
               </tr>
 
@@ -201,8 +201,8 @@
                   Low Inside Temperature
                 </td>
                 <td class="stats_data">
-                  79.9&#176;F at 04:12:14 PM<br/>
-                  74.5&#176;F at 07:30:14 AM
+                  83.8&#176;F at 04:04:18 PM<br/>
+                  74.1&#176;F at 05:33:15 AM
                 </td>
               </tr>
               <tr>
@@ -211,7 +211,7 @@
                   Low UV
                 </td>
                 <td class="stats_data">
-                  7.0 at 02:44:14 PM<br/>
+                  9.0 at 01:25:15 PM<br/>
                   0.0 at 12:00:14 AM
                 </td>
               </tr>
@@ -221,7 +221,7 @@
                   Low ET
                 </td>
                 <td class="stats_data">
-                  0.00 in at 01:15:00 PM<br/>
+                  0.00 in at 02:20:00 PM<br/>
                   0.00 in at 12:05:00 AM
                 </td>
               </tr>
@@ -231,7 +231,7 @@
                   Low Radiation
                 </td>
                 <td class="stats_data">
-                  795 W/m&#178; at 02:44:14 PM<br/>
+                  1024 W/m&#178; at 01:56:18 PM<br/>
                   0 W/m&#178; at 12:00:14 AM
                 </td>
               </tr>
@@ -274,8 +274,8 @@
           <p><a href="RSS/weewx_rss.xml">RSS feed</a></p>
           <p><a href="mobile.html">Mobile formatted</a></p>
           <p><a href="smartphone/index.html">Smartphone formatted</a></p>
-          <p>Weewx uptime:  2 days, 7 hours, 49 minutes<br/>
-             Server uptime: 1 day, 23 hours, 5 minutes<br/>
+          <p>Weewx uptime:  0 days, 19 hours, 54 minutes<br/>
+             Server uptime: 0 days, 20 hours, 12 minutes<br/>
              weewx v3.8.2</p>
         </div> <!-- End id "about" -->
         
@@ -287,15 +287,15 @@
             <table>
               <tr>
                 <td class="label">Sunrise:</td>
-                <td class="data">06:49:29 AM</td>
+                <td class="data">06:50:22 AM</td>
               </tr>
               <tr>
                 <td class="label">Sunset:</td>
-                <td class="data">07:23:39 PM</td>
+                <td class="data">07:22:04 PM</td>
               </tr>
               <tr>
                 <td class="label">Moon Phase:</td>
-                <td class="data">New<br/>(4% full)</td>
+                <td class="data">Waxing crescent<br/>(9% full)</td>
               </tr>
             </table>
           </div> <!-- end class "celestial_group" -->
