--- a/weewx/smartphone/barometer.html
+++ b/weewx/smartphone/barometer.html
@@ -16,8 +16,8 @@
      <h4>24h barometer</h4>
      <img src="../daybarometer.png"/>
      <ul>
-       <li>Today's min: 30.192 inHg at 12:01:14 AM</li>
-       <li>Today's max: 30.279 inHg at 11:28:14 AM</li>
+       <li>Today's min: 30.181 inHg at 04:02:15 PM</li>
+       <li>Today's max: 30.259 inHg at 09:52:15 AM</li>
      </ul>
 
      <h4>7-day barometer</h4>
